chains/tempo-old/check_results.txt
    Checking tempo-project v0.1.0 (C:\My Script\testnet-framework\chains\tempo)
error[E0599]: no method named `gas_price` found for struct `Deployer<B, M>` in the current scope
  --> chains\tempo\src\tasks\t45_deploy_viral_faucet.rs:29:44
   |
29 |         let deployer = factory.deploy(())?.gas_price(bumped_gas_price);
   |                                            ^^^^^^^^^ method not found in `Deployer<Arc<SignerMiddleware<Arc<Provider<Http>>, Wallet<...>>>, ...>`
   |
   = note: the full name for the type has been written to 'C:\My Script\testnet-framework\target\debug\deps\tempo_project-10025a4f1714bf9f.long-type-9565731431594387077.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: one of the expressions' fields has a method of the same name
   |
29 |         let deployer = factory.deploy(())?.tx.gas_price(bumped_gas_price);
   |                                            +++

error[E0282]: type annotations needed
  --> chains\tempo\src\tasks\t45_deploy_viral_faucet.rs:30:13
   |
30 |         let contract = deployer.send().await?;
   |             ^^^^^^^^
31 |         let contract_addr = contract.address();
   |                             -------- type must be known at this point
   |
help: consider giving `contract` an explicit type
   |
30 |         let contract: /* Type */ = deployer.send().await?;
   |                     ++++++++++++

error[E0599]: no method named `gas_price` found for struct `Deployer<B, M>` in the current scope
  --> chains\tempo\src\tasks\t47_deploy_viral_nft.rs:29:44
   |
29 |         let deployer = factory.deploy(())?.gas_price(bumped_gas_price);
   |                                            ^^^^^^^^^ method not found in `Deployer<Arc<SignerMiddleware<Arc<Provider<Http>>, Wallet<...>>>, ...>`
   |
   = note: the full name for the type has been written to 'C:\My Script\testnet-framework\target\debug\deps\tempo_project-10025a4f1714bf9f.long-type-9565731431594387077.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: one of the expressions' fields has a method of the same name
   |
29 |         let deployer = factory.deploy(())?.tx.gas_price(bumped_gas_price);
   |                                            +++

error[E0282]: type annotations needed
  --> chains\tempo\src\tasks\t47_deploy_viral_nft.rs:30:13
   |
30 |         let contract = deployer.send().await?;
   |             ^^^^^^^^
31 |         let contract_addr = contract.address();
   |                             -------- type must be known at this point
   |
help: consider giving `contract` an explicit type
   |
30 |         let contract: /* Type */ = deployer.send().await?;
   |                     ++++++++++++

error[E0599]: no method named `gas_price` found for struct `Deployer<B, M>` in the current scope
  --> chains\tempo\src\tasks\t49_time_bomb.rs:36:44
   |
36 |         let deployer = factory.deploy(())?.gas_price(bumped_gas_price);
   |                                            ^^^^^^^^^ method not found in `Deployer<Arc<SignerMiddleware<Arc<Provider<Http>>, Wallet<...>>>, ...>`
   |
   = note: the full name for the type has been written to 'C:\My Script\testnet-framework\target\debug\deps\tempo_project-10025a4f1714bf9f.long-type-9565731431594387077.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: one of the expressions' fields has a method of the same name
   |
36 |         let deployer = factory.deploy(())?.tx.gas_price(bumped_gas_price);
   |                                            +++

error[E0282]: type annotations needed
  --> chains\tempo\src\tasks\t49_time_bomb.rs:37:13
   |
37 |         let contract = deployer.send().await?;
   |             ^^^^^^^^
38 |         let contract_addr = contract.address();
   |                             -------- type must be known at this point
   |
help: consider giving `contract` an explicit type
   |
37 |         let contract: /* Type */ = deployer.send().await?;
   |                     ++++++++++++

error: future cannot be sent between threads safely
  --> chains\tempo\src\tasks\t50_deploy_storm.rs:17:5
   |
17 |     async fn run(&self, ctx: TaskContext) -> Result<TaskResult> {
   |     ^^^^^ future created by async block is not `Send`
   |
   = help: within `{async block@chains\tempo\src\tasks\t50_deploy_storm.rs:17:5: 17:10}`, the trait `Send` is not implemented for `Rc<UnsafeCell<ReseedingRng<rand_chacha::chacha::ChaCha12Core, OsRng>>>`
note: future is not `Send` as this value is used across an await
  --> chains\tempo\src\tasks\t50_deploy_storm.rs:30:70
   |
21 |         let mut rng = rand::thread_rng();
   |             ------- has type `ThreadRng` which is not `Send`
...
30 |             let gas_price = GasManager::estimate_gas(&*ctx.provider).await?;
   |                                                                      ^^^^^ await occurs here, with `mut rng` maybe used later
   = note: required for the cast from `Pin<Box<{async block@chains\tempo\src\tasks\t50_deploy_storm.rs:17:5: 17:10}>>` to `Pin<Box<dyn Future<Output = std::result::Result<TaskResult, anyhow::Error>> + Send>>`

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `tempo-project` (lib) due to 7 previous errors
